<resources>
    <string name="app_name">My Shop</string>

    <string name="model">Модель</string>
    <string name="year">Год выпуска</string>
    <string name="mileage">Пробег</string>
    <string name="price">Цена</string>
    <string name="image_preview">image_preview</string>

    <string name="hint_name">Введите имя пользователя</string>
    <string name="hint_pass">Введите пароль</string>
    <string name="show_result">Авторизоваться</string>
    <string name="auth_error">Ошибка авторизации</string>
    <string name="request_error">Ошибка запроса</string>
    <string name="add_to_basket">Добавить в корзину</string>
    <string name="basket_text">Корзина</string>
    <string name="order_text">Оформить заказ</string>
    <string name="network_error">Ошибка сети!</string>

</resources>
