<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CarDetailsActivity">

    <ImageView
        android:id="@+id/imageViewCar"
        android:layout_width="265dp"
        android:layout_height="253dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/image_preview" />

    <TextView
        android:id="@+id/textViewNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/model"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewName"
        />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCar"
        app:layout_constraintStart_toEndOf="@id/textViewNameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/textViewYearLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/year"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewYear"/>

    <TextView
        android:id="@+id/textViewYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        app:layout_constraintStart_toEndOf="@+id/textViewYearLabel"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/textViewMileAgeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/mileage"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/textViewYearLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewMileAge"
        />

    <TextView
        android:id="@+id/textViewMileAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/textViewYear"
        app:layout_constraintStart_toEndOf="@+id/textViewMileAgeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/textViewPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/price"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/textViewMileAgeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewPrice"
        />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/textViewMileAge"
        app:layout_constraintStart_toEndOf="@+id/textViewPriceLabel"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/buttonAddToBasket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="8dp"
        android:textSize="@dimen/text_size"
        android:text="@string/add_to_basket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPriceLabel" />
</android.support.constraint.ConstraintLayout>